2006-09-10  Martin Mares  <mj@ucw.cz>

	* pci.ids: Updated to the current database snapshot.

	* lspci.c (scan_device): If an error occurs when reading the standard config
	header of a device, report it and ignore the device and return with exit
	code 2 at the end.

2006-09-09  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.4.

	* maint/release: Remind the maintainer about the current PCI_LIB_VERSION.

	* lib/pci.h: Updated PCI_LIB_VERSION.

	* lspci.c (show_machine): In the `-m' mode, do proper shell escaping
	if the fields printed contain quotes or backslashes.

	* lspci.c (show_machine): Added a `-vmm' mode, which removes the misuse
	of the `Device' tag for two different purposes.

	* Makefile: Moved all system-dependent decisions to lib/configure,
	since config.mk is included in the top-level Makefile anyway.

	* lib/configure: When configuring for Linux, ignore the kernel version
	and always build all access methods.

	* Makefile (CFLAGS): Removed -Winline, it's not needed and triggers
	at many non-interesting places with gcc 3.4.

	* Whitespace cleanup of all source files.

	* The pci.ids file can be stored compressed if zlib is available.
	Added transparent decompression to lib/names.c, modified update-pciids.sh
	to keep the file compressed if applicable, updated Makefiles.
	Based on a patch by Matthew Wilcox, but all the bugs are mine.

	* Makefile, README: Allow installation to be done to a different directory
	from the one we will eventually be placed in by setting DESTDIR.
	Patch by Matthew Wilcox.

	* Added .gitignore files.

	* Makefile (clean): Clean *.orig, too.

	* Cleaned up usage of `char' and `byte'.

	* lib/header.h: PCI_CLASS_DOCKING_OTHER should be 0x0a80, not 0x0a01.

	* lib/header.h: Added PCI_CLASS_xxx constants for all classes currently
	defined in the pci.ids file.

2006-08-01  Martin Mares  <mj@ucw.cz>

	* lib/i386-io-hurd.h: Fixed a silly typo.

2006-07-30  Martin Mares  <mj@ucw.cz>
